apps/staging/adguard-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-udp
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  loadBalancerIP: 192.168.3.17
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
spec:
  loadBalancerIP: 192.168.3.16
