apps/staging/crypto-automation.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-agent-public
  namespace: crypto-automate
spec:
  loadBalancerIP: 192.168.3.22
