apps/staging/jupyternb-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyternb
  namespace: jupyter
spec:
  loadBalancerIP: 192.168.3.18
