apps/staging/mqtt-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-mosquitto
  namespace: mqtt
spec:
  loadBalancerIP: 192.168.3.14
