apps/staging/pi-hole-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pi-hole
  labels:
    app: pihole
spec:
  loadBalancerIP: 192.168.3.17
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pi-hole
  labels:
    app: pihole
spec:
  loadBalancerIP: 192.168.3.16
