apps/staging/pi-temp-agent-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-temp-public
  namespace: pi-temp
spec:
  loadBalancerIP: 192.168.3.14
