apps/staging/pi-temp-agent_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-temp-public
spec:
  loadBalancerIP: 192.168.3.14
