apps/staging/patch-nodered-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nodered
  namespace: node-red
spec:
  tls:
  - hosts:
    - "nodered.${domain}"
    secretName: nodered-tls-prod
